# SENTRY-Node-Mk-I

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF_CHECKLIST.md  HANDOFF_README.md  LICENSE  README.md  RUNPOD_DEPLOYMENT_CHECKLIST.md  SECURITY.md  manifest.json  run_complete_audit.py
.github/workflows/: ci.yml
configs/: deployment_chain_alpha.json  deployment_site_alpha.json  procurement_bom.json  sentry_mission_profile.json  sentry_node_config.json
configs/nodes/: sentry-pi-zero-001.json  sentry-pi-zero-002.json  sentry-pi-zero-003.json  sentry-pi-zero-004.json
deploy/: 99-sentry.rules  bootstrap_pi_zero.sh  firmware_integrity.py  sentry-guardian.service  sentry-security.service
docs/: BUILD_STAGE.md  bom_dimensions.md  build_assembly.md  darkspace_integration_architecture.md  deployment_chain.md  export_screening.md  gate_execution.md  known_first_build_failures.md  outputs_icd.md  pi_deployment.md  project_overview.md  risk_register.md  sd_flash_checklist.md  system_datasheet.md
docs/examples/: alert_frame.v1.example.json  omen_alert.v1.example.json  power_sample.v1.json  sensor_event.v1.example.json
implementation/: pyproject.toml
implementation/src/sentry/: __init__.py  __main__.py  audit.py  chaos.py  cli.py  failure_modes.py  fusion.py  guardian.py  ingest.py  power.py  schema_validate.py  scoring.py  tamper_response.py  types.py
implementation/src/sentry/audit/: __init__.py  hmac_chain.py  sqlite_store.py
implementation/src/sentry/deployment/: __init__.py  chain_topology.py  config.py  manager.py  monte_carlo_impact.py  physics.py  post_landing.py
implementation/src/sentry/gpu/: __init__.py  acoustic_batch.py  device.py  melt.py  monte_carlo.py
implementation/src/sentry/hardware/: __init__.py  acoustic.py  live_array.py  meshtastic.py  pir.py  probe.py  rf_friis.py  rf_rtl.py  tamper.py  visual.py
implementation/src/sentry/networking/: __init__.py  meshtastic_handler.py  p2p_mesh.py
implementation/src/sentry/sensors/: __init__.py  acoustic_sensor.py  ghost_monitor.py  power_metrics.py  rf_sensor.py  whisper_detector.py
implementation/src/sentry/simulation/: __init__.py  __main__.py  stress_test.py  synthetic.py
implementation/tests/: chaos_injector.py  conftest.py  test_darkspace_integration.py  test_deployment.py  test_gpu.py  test_hardware_acoustic.py  test_hardware_integration.py  test_hardware_rf.py  test_schemas.py  test_simulation.py
schemas/: alert_frame.v1.json  audit_entry.v1.json  deployment_manifest.v1.json  omen_alert.v1.json  power_metrics.v1.json  sensor_event.v1.json
scripts/: build_ci_summary.py  collect_ci_reports.py  generate_manifest.py  publish_results.py  runpod_validation_sweep.py
tests/: chaos_injector.py
validation/: build_readiness.py  flood_sentry_guard.py  generate_node_configs.py  run_gate.py
validation/published/: RESULTS.md  build_readiness.txt  coverage.xml  defense-readiness-sentry.json  pytest-junit.xml  simulation.txt  summary.json
validation/reports/: sentry_audit_benign.jsonl  sentry_audit_intrusion.jsonl  sentry_audit_jamming.jsonl  sentry_audit_low_visibility.jsonl  sentry_live_alerts.jsonl  sentry_live_audit.jsonl  sentry_power.jsonl  sentry_sim_benign.jsonl  sentry_sim_intrusion.jsonl  (+2 more)
(+13 files in other folders)
