[project]
name = "sentry"
version = "0.4.0"
description = "SENTRY — passive Pi early-warning guardian node (Fratres X AI)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=5.0", "jsonschema>=4.20", "mypy>=1.10", "numpy>=1.26", "scipy>=1.11", "psutil>=5.9"]
hardware = [
  "numpy>=1.26",
  "scipy>=1.11",
  "psutil>=5.9",
  "PyAudio>=0.2.14",
  "opencv-python-headless>=4.8",
  "meshtastic>=2.3.0",
  "pyserial>=3.5",
]
pi = [
  "lgpio>=0.2.2",
  "RPi.GPIO>=0.7.1",
]
gpu = [
  "numpy>=1.26",
  "torch>=2.2",
]

[project.scripts]
sentry-guard = "sentry.cli:guard_main"
sentry-sim = "sentry.cli:sim_main"
sentry-stress = "sentry.simulation.stress_test:main"
sentry-melt = "sentry.cli:melt_main"
sentry-deploy = "sentry.cli:deploy_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["src/sentry"]
omit = [
  "src/sentry/__main__.py",
  "src/sentry/audit/*",
  "src/sentry/chaos.py",
  "src/sentry/cli.py",
  "src/sentry/deployment/*",
  "src/sentry/failure_modes.py",
  "src/sentry/fusion.py",
  "src/sentry/gpu/*",
  "src/sentry/guardian.py",
  "src/sentry/hardware/*",
  "src/sentry/ingest.py",
  "src/sentry/networking/meshtastic_handler.py",
  "src/sentry/networking/p2p_mesh.py",
  "src/sentry/power.py",
  "src/sentry/schema_validate.py",
  "src/sentry/simulation/*",
  "src/sentry/sensors/acoustic_sensor.py",
  "src/sentry/sensors/ghost_monitor.py",
  "src/sentry/sensors/power_metrics.py",
  "src/sentry/sensors/rf_sensor.py",
  "src/sentry/sensors/whisper_detector.py",
  "src/sentry/tamper_response.py",
  "src/sentry/types.py",
]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sentry"]
exclude = ["src/sentry/gpu"]

[[tool.mypy.overrides]]
module = [
  "jsonschema",
  "psutil",
  "meshtastic.*",
  "lgpio",
  "RPi.*",
  "pyaudio",
  "cv2",
  "scipy",
  "scipy.*",
  "torch",
  "torch.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
